lustre/target/out_lib.c
@@ -665,13 +665,17 @@ static int out_tx_write_exec(const struct lu_env *env, struct thandle *th,
 	       PFID(lu_object_fid(&dt_obj->do_lu)), arg->u.write.pos,
 	       arg->u.write.buf.lb_buf, (unsigned long)arg->u.write.buf.lb_len);
 
-	dt_write_lock(env, dt_obj, MOR_TGT_CHILD);
-	rc = dt_record_write(env, dt_obj, &arg->u.write.buf,
-			     &arg->u.write.pos, th);
-	dt_write_unlock(env, dt_obj);
+	if (OBD_FAIL_CHECK(OBD_FAIL_OUT_ENOSPC)) {
+		rc = -ENOSPC;
+	} else {
+		dt_write_lock(env, dt_obj, MOR_TGT_CHILD);
+		rc = dt_record_write(env, dt_obj, &arg->u.write.buf,
+				     &arg->u.write.pos, th);
+		dt_write_unlock(env, dt_obj);
 
-	if (rc == 0)
-		rc = arg->u.write.buf.lb_len;
+		if (rc == 0)
+			rc = arg->u.write.buf.lb_len;
+	}
 
 	if (arg->reply != NULL)
 		object_update_result_insert(arg->reply, NULL, 0, arg->index,
